.. This file should contain the changes for the last release only, which
   will be included on the package's page on pypi. All older entries are
   kept in HISTORY.txt

Changelog
=========

4.1b2 - Unreleased
------------------

- Update MigrationTool.getSoftwareVersion to return Products.CMFPlone version.
  [elro]

4.1b1 - 2011-03-06
------------------

- Remove useless trailing slash in 404.
  This fixes http://dev.plone.org/plone/ticket/11550
  [gotcha]

- Remove invocation of do_search_collapse from advanced search form.
  It caused the function to run twice, making collapsibles wink
  rather than open. Fixes http://dev.plone.org/plone/ticket/11565
  [smcmahon]

- Use correct argument order in utranslate.py script.
  This fixes http://dev.plone.org/plone/ticket/10395
  [fRiSi]

- Add missing security declarations on PropertiesTool.
  [davisagli]

4.1a3 - 2011-02-14
------------------

- Discontinue tagging plone_3rd party as a separate external.
  [esteele]

4.1a2 - 2011-02-10
------------------

- On search form don't show list of users when anonymous
  unless explicitly allowed in @@security-controlpanel.
  Fixes http://dev.plone.org/plone/ticket/11346
  [msmith64]

- Add fallback icon for control panels with no icon, in the portlet_prefs
  portlet. This fixes http://dev.plone.org/plone/tickets/11112.
  [topherh, davisagli]

- Use the new optimized BooleanIndex for the `is_default_page` and
  `is_folderish` indexes and the new `UUIDIndex` for the `UID` index.
  [hannosch]

- Remove js-generated inline style from searchbox. Same CSS is in public.css.
  Fixes http://dev.plone.org/plone/tickets/11186.
  [msmith64]

- Use nocall: when getting the @@sitemap_view in sitemap.pt.
  [elro]

- Hide plone.app.registry, z3c.form as an add-on options from the
  @@plone-addsite view, quickinstaller.
  [esteele]

- Merge in PLIP #9288: Improved commenting infrastructure. Refs
  http://dev.plone.org/plone/ticket/9288
  [timo]
